[bdist_wheel]
universal = 1

[metadata]
name = cheroot
url = https://cheroot.cherrypy.dev
project_urls =
  CI: GitHub = https://github.com/cherrypy/cheroot/actions
  Docs: RTD = https://cheroot.cherrypy.dev
  GitHub: issues = https://github.com/cherrypy/cheroot/issues
  GitHub: repo = https://github.com/cherrypy/cheroot
  Tidelift: funding = https://tidelift.com/subscription/pkg/pypi-cheroot?utm_source=pypi-cheroot&utm_medium=referral&utm_campaign=pypi
description = Highly-optimized, pure-python HTTP server
long_description = file: README.rst
long_description_content_type = text/x-rst
author = CherryPy Team
author_email = team@cherrypy.dev
license_files =
  LICENSE.md
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Web Environment
  Intended Audience :: Developers
  Operating System :: OS Independent
  Framework :: CherryPy
  License :: OSI Approved :: BSD License
  Programming Language :: Python
  Programming Language :: Python :: 2
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.4
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: Implementation
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: Jython
  Programming Language :: Python :: Implementation :: PyPy
  Topic :: Internet :: WWW/HTTP
  Topic :: Internet :: WWW/HTTP :: HTTP Servers
  Topic :: Internet :: WWW/HTTP :: WSGI
  Topic :: Internet :: WWW/HTTP :: WSGI :: Server
  Typing :: Typed
keywords =
  http
  server
  ssl
  wsgi

[options]
use_scm_version = True
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*
packages = find:
include_package_data = True

# These are required during `setup.py` run:
setup_requires =
  setuptools_scm>=1.15.0
  setuptools_scm_git_archive>=1.0

# These are required in actual runtime:
install_requires =
  backports.functools_lru_cache; python_version < '3.3'
  selectors2; python_version< '3.4'
  six>=1.11.0
  # NOTE: `more-itertools` has a bug in their package metadata. They
  # NOTE: have dropped the testing of Python 3.5 from their CI but
  # NOTE: forgot to state this in the distribution package metadata.
  # NOTE: This is why we need these conditionals below.
  # Refs:
  # * https://github.com/more-itertools/more-itertools/issues/578
  # * https://github.com/more-itertools/more-itertools/pull/579
  more_itertools >= 2.6, < 8.11.0; python_version < '3.6'
  more_itertools >= 2.6; python_version >= '3.6'
  jaraco.functools

[options.extras_require]
docs =
  # upstream
  sphinx>=1.8.2
  jaraco.packaging>=3.2
  sphinx-tabs>=1.1.0

  # local
  furo
  # `scm_tag_titles_ext` extension dep in docs/
  python-dateutil
  sphinxcontrib-apidoc>=0.3.0

[options.entry_points]
console_scripts =
  cheroot = cheroot.cli:main

[options.package_data]
cheroot = py.typed
